# agentic-company

./: .gitignore  .pre-commit-config.yaml  AGENTICOM_IMPROVEMENTS.md  CLAUDE.md  DASHBOARD_EVALUATION.md  DESIGN_SYSTEM_TEMPLATE.md  Dockerfile  EVALUATION_REPORT.md  FINAL_SUCCESS_REPORT.md  FIXES_COMPLETED.md  INSTALL.md  LOOP_BACK_IMPLEMENTATION.md  MEMORY_MANAGEMENT_PROPOSAL.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PHASE_1_2_TESTING_GUIDE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_TESTING_GUIDE.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_5_6_IMPLEMENTATION_SUMMARY.md  QUALITY_GATE_TEST_RESULTS.md  README.md  TESTING_SUMMARY.md  TEST_IMPLEMENTATION_COMPLETE.md  WORKFLOW_LESSONS.md  YOUR_MEMORY_CONFIGURATION.md  alembic.ini  docker-compose.yml  inspect_webapp.js  install.ps1  install.sh  pyproject.toml  setup.py  setup.sh  test_phase3_retry.py  test_phase3_workflow.py  test_real_cases.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
agenticom/: __init__.py  cli.py  core.py  dashboard.py  failure_handler.py  state.py  workflows.py
agenticom/bundled_workflows/: autonomous-dev-loop.yaml  churn-analysis.yaml  compliance-audit.yaml  due-diligence.yaml  feature-dev-llm-recovery.yaml  feature-dev-with-diagnostics.yaml  feature-dev-with-loopback.yaml  feature-dev.yaml  grant-proposal.yaml  incident-postmortem.yaml  marketing-campaign.yaml  patent-landscape.yaml  security-assessment.yaml
demo/: README.md  index.html  server.py  test_final_prompt.py  test_real_llm.py
docker/: prometheus.yml
docs/: AGENT_DECISION_RULES.md  ANTFARM_COMPARISON.md  API.md  ARCHITECTURE.md  ARCHITECTURE_CONCEPTS.md  AUTOMATION_LEVELS.md  CAPACITY_ANALYSIS.html  CONVERSATIONAL_REFINEMENT_UI.md  FIXES_NEEDED.md  MCP_INTEGRATION_ANALYSIS.md  MCP_INTEGRATION_RESULTS.md  MONITORING_ADAPTIVE_MEMORY.md  NEW_FEATURES.md  OPENCLAW_INTEGRATION_REPORT.md  PRIORITIES_TEMPLATE.md  REFINER_IMPLEMENTATION_OPTIONS.md  SMART_REFINER.md  STRESS_TEST_REPORT.md  TEST_RESULTS.md  V3_ASSESSMENT.md  WORKFLOW_LESSONS.md  case_studies_output.txt
docs/guides/: FEATURE_DEV_DIAGNOSTICS_GUIDE.md  INTEGRATION.md  TESTING_GUIDE.md
docs/phases/: PHASE1_COMPLETE_STAGE_TRACKING.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_SUCCESS_REPORT.md
docs/reports/: ACHIEVEMENT_SUMMARY.md  ARTIFACT_SYSTEM_COMPLETE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SYSTEM_TEST_RESULTS.md  META_LEARNING_SUMMARY.md  SEMANTIC_MEMORY_IMPLEMENTATION.md  SMARTREFINER_DASHBOARD_INTEGRATION.md  TEST_RUN_SUMMARY.md  WORK_COMPLETED.md
examples/: case_study_01_feature_dev_self_improvement.py  case_study_02_feature_dev_with_diagnostics.py  diagnostics_example.py  exploration_01_agent_skills.py  exploration_02_claude_code_skills_principles.py  marketing_team.py  phase2_diagnostics_example.py
examples/diagnostics/: README.md  api_test.json  login_test.json  simple_screenshot.json
experiments/: diversified_evaluation_results.csv  diversified_test_cases.py  generate_wow_comparison.py  hybrid_evaluation.py  hybrid_evaluation_results.csv  intent_refiner_evaluation.py  intent_refiner_evaluation_results.csv  intent_refiner_wow_comparison.csv  prompt_quality_comparison.py  run_diversified_evaluation.py  smart_refiner_demo.py  smart_refiner_evaluation.py  smart_refiner_real_eval.py  smart_refiner_real_results.csv  smart_refiner_sampled_eval.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/components/: SmartChatbox.jsx
frontend/src/: App.tsx  index.css
marketing/: MARKETING_KIT.md  NANO_BANANA_PROMPTS.md
migrations/: env.py
orchestration/: __init__.py  _version.py  api.py  approval.py  artifact_manager.py  artifacts.py  cache.py  cli.py  config.py  conversation.py  database.py  evaluator.py  executor.py  guardrails.py  launcher.py  lessons.py  mcp_server.py  memory.py  memory_config.py  memory_metrics.py  observability.py  pipeline.py  security.py  tasks.py  telemetry.py
orchestration/agents/: __init__.py  base.py  specialized.py  team.py
orchestration/api/: refinement_api.py
orchestration/diagnostics/: __init__.py  capture.py  config.py  criteria_builder.py  integration.py  iteration_monitor.py  meta_analyzer.py
orchestration/integrations/: __init__.py  nanobot.py  ollama.py  openclaw.py  unified.py
orchestration/self_improvement/: __init__.py  adapters.py  improvement_loop.py  prompt_evolver.py  run_recorder.py  semantic_smarc.py
orchestration/static/: index.html
orchestration/tools/: __init__.py  conversational_refiner.py  hybrid_refiner.py  intent_refiner.py  llm_conversational_refiner.py  mcp_bridge.py  prompt_engineer.py  registry.py  skill_loader.py  smart_refiner.py
orchestration/workflows/: __init__.py  parser.py  templates.py
outputs/0c348a19/: auth_service.py  conftest.py  manifest.json  output_0.py
outputs/1d14e7a0/: output_0.py  (+1 more)
scripts/: check_root_clutter.py  demo_self_improvement.py  extract_artifacts.py
test_workflows/: test_full_system.yaml  test_simple_diagnostics.yaml
tests/: __init__.py  conftest.py  stress_test_mcp_integration.py  stress_test_real_examples.py  test_agents.py  test_api.py  test_api_endpoints.py  test_approval_extended.py  test_artifact_manager.py  test_cache_extended.py  test_cli.py  test_cli_commands.py  test_complete_integration.py  test_conversation.py  test_critical_fixes.py  test_diagnostics.py  test_diagnostics_integration.py  test_e2e_workflow.py  test_enterprise_workflows.py  test_evaluator_extended.py  test_executor.py  test_guardrails.py  test_integrations_extended.py  test_intent_refiner.py  test_lesson_system.py  test_mcp_bridge.py  test_mcp_server.py  test_memory_extended.py  test_memory_metrics.py  test_phase3_auto_test_loop.py  test_phase3_retry.py  test_phase3_workflow.py  test_phase4_meta_analysis.py  test_phase4_meta_analysis_additional.py  test_phase5_criteria_builder.py  test_pipeline.py  test_prompt_engineer.py  test_real_cases.py  test_security_extended.py  test_self_improvement.py  (+6 more)
workflows/: marketing-campaign.yaml
(+79 files in other folders)
